--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <h1>
             Here is my title
         </h1>
-        
-        
-    <script src="script.js"></script>
+        <div>Player 1</div>
+        <div class="p1Name"></div>
+        <div class="p1Name"></div>    
+    <script src="/media/jquery.js"></script>
+    <script src="socket.io"></script>
+    <script src="/media/script.js"></script>
     </body>
 </html>
