fixed media server

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="p1Name"></div>
         <div class="p1Name"></div>    
     <script src="/media/jquery.js"></script>
-    <script src="socket.io"></script>
+    <script src="socket.io/socket.io.js"></script>
     <script src="/media/script.js"></script>
     </body>
 </html>
