I added in the chat functionality

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
             Here is my title
         </h1>
         <div>Player 1</div>
-        <div class="p1Name"></div>
-        <div class="p1Name"></div>    
+        <input class="chat-input" type="text" placeholder="Chat here"/>
+        <ul class="chatlog"></ul>                                          <!--ul is a list -->
+        <a href="#" class="chat-submit">Submit</a>
     <script src="/media/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/media/script.js"></script>
