--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
         <input class="chat-input" type="text" placeholder="Chat here"/>
         <ul class="chatlog"></ul>                                          <!--ul is a list -->
         <a href="#" class="chat-submit">Submit</a>
+        <select>
+            <option>Talk</option>
+            <option>Get</option>
+            <option>Look</option>
+</select>
     <script src="/media/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/media/models.js"></script>
     <script src="/media/script.js"></script>
+
     </body>
 </html>
